# u8gg

./: Cargo.toml  README.md  test.md
.cargo/: config.toml
src/: lib.rs  menu.rs  net.rs  provision.rs  qrcode.rs  ui.rs  viewmodel.rs  wifi.rs
src/ui/: mod.rs  qrcode.rs  widgets.rs
