[package]
edition      = "2024"
name         = "u8gg"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "u8gg"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32c3", "unstable", "rt"] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c3"] }
log = "0.4.33"
esp-println = {version = "0.17.0", features = ["esp32c3" , "log-04"]}

critical-section = "1.2.0"
esp-backtrace = { version = "0.19.0", features = ["esp32c3", "panic-handler", "println"], default-features = false }
embedded-graphics = "0.8.2"
ssd1306 = "0.10.0"
u8g2-fonts = { version = "0.8.0", features = ["embedded_graphics_textstyle"] }

# WiFi
esp-radio = { version = "0.18", features = ["esp32c3", "wifi", "esp-alloc", "unstable"] }
esp-rtos  = { version = "0.3",  features = ["esp32c3", "esp-radio", "esp-alloc"] }
esp-alloc = "0.10"
smoltcp = { version = "0.13", default-features = false, features = ["alloc", "proto-ipv4", "socket-tcp", "medium-ethernet"] }
embassy-net-driver = "0.2"
heapless = "0.9"
embedded-qr = "0.2.0"

[profile.dev.package.esp-radio]
opt-level = 3

[profile.dev.package.esp-rtos]
opt-level = 3


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
