[package]
edition      = "2021"
name         = "u8gg"
rust-version = "1.77"
version      = "0.1.0"
resolver     = "2"

[[bin]]
name = "u8gg"
path = "./src/bin/main.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[dependencies]
log = "0.4"

# ESP-IDF std stack (ESP32-C3 only).
# NOTE: depend ONLY on esp-idf-svc and use esp_idf_svc::hal::* everywhere.
# Adding esp-idf-hal directly would pull a second copy of the HAL and cause
# "expected esp_idf_hal::..., found esp_idf_svc::hal::..." type mismatches.
esp-idf-svc = { version = "0.51", features = ["native", "critical-section"] }  # embassy-time-driver removed: src uses no embassy runtime; it pulled embassy-executor -> undefined `__pender` at link time

# UI / graphics (std-compatible, unchanged)
embedded-graphics = "0.8.2"
ssd1306 = "0.10.0"
u8g2-fonts = { version = "0.8.0", features = ["embedded_graphics_textstyle"] }
embedded-qr = "0.2.0"
heapless = "0.9"

anyhow = "1"

[build-dependencies]
# embuild emits the ESP-IDF link args (linkall.ld etc.) via cargo directives;
# ldproxy is a standalone linker wrapper installed separately (`cargo install ldproxy`)
# and referenced as `linker = "ldproxy"` in .cargo/config.toml.
embuild = "0.33"

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
debug    = true   # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
panic    = "abort"  # esp-espidf target requires panic=abort

[profile.release]
opt-level = "s"
panic    = "abort"  # esp-espidf target requires panic=abort
